# djangoVideoProject

./: .gitignore  README.md  manage.py  pyproject.toml
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
djangoVideoProject/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
